# pycalf

./: .gitignore  .readthedocs.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: docs-build.yml  publish-to-test-pypi.yml  pypi-publish.yml  python-package.yml  tests.yml
docs/: README.md  conf.py  help.rst  index.rst  license.rst  modules.rst  pycalf.rst  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  pycalf.rst  tests.rst
examples/: DoubleRobustSample.ipynb  IPW_example.py  MatchingSample.ipynb  SamplePropensityScore.ipynb  SampleUpliftModeling.ipynb  SampleWithDoubleRobust.ipynb  SampleWithIPW.ipynb  SampleWithMatching.ipynb  TVCM_Report.ipynb  UpliftModelingWithDoubleRobust.ipynb  UpliftModelingWithIPW.ipynb
examples/sample/: q_data_x.csv
pycalf/: PropensityScore.py  metrics.py  propensity.py  propensity_score.py  uplift.py  visualize.py
tests/: conftest.py  test_metrics.py  test_propensity.py  test_pycalf.py  test_uplift.py  test_visualize.py
