[tool.poetry]
name = "pycalf"
version = "0.2.10"
description = ""
authors = ["konumaru <konumaru1022@gmail.com>"]
documentation = "https://pycalf.readthedocs.io/en/latest/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/konumaru/pycalf"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.18.2"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
scikit-learn = "^1.3.1"
statsmodels = "^0.14.0"
jupyterlab = "^2.2.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
pyproject-flake8 = "^6.1.0"
mypy = "^1.6.1"
isort = "^5.12.0"
black = "^23.10.0"
pydocstyle = "^6.3.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
sphinx_rtd_theme = "^0.5.0"
sphinxcontrib-apidoc = "^0.4.0"
sphinxcontrib-seqdiag = "^3.0.0"
recommonmark = "^0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.flake8]
max-line-length = 79
extend-ignore = "E203,W503,F401,F841,W605"

[tool.black]
target-version = ["py39", "py310", "py311"]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
include_trailing_comma = true

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
