[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycalf"
version = "0.2.12"
description = ""
authors = [
    {name = "konumaru", email = "konumaru1022@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.18.2",
    "pandas>=1.0.3",
    "matplotlib>=3.2.1",
    "scikit-learn>=1.3.1",
    "statsmodels>=0.14.0",
]

[project.urls]
repository = "https://github.com/konumaru/pycalf"
documentation = "https://pycalf.readthedocs.io/en/latest/"

[tool.flake8]
max-line-length = 79
extend-ignore = "E203,W503,F401,F841,W605"

[tool.black]
target-version = ["py39", "py310", "py311"]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79
include_trailing_comma = true

[tool.mypy]
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true
