[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pycalf"
version = "0.3.0"
description = ""
authors = [
    {name = "konumaru", email = "konumaru1022@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.18.2",
    "pandas>=1.0.3",
    "matplotlib>=3.2.1",
    "scikit-learn>=1.3.1",
    "statsmodels>=0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[project.urls]
repository = "https://github.com/konumaru/pycalf"
documentation = "https://pycalf.readthedocs.io/en/latest/"


[tool.ruff]
line-length = 79
select = ["E", "F", "I"]
ignore = ["E203", "W503", "F401", "E501", "F841", "W605"]
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".tox",
    ".venv",
    "_build",
    "buck-out",
    "build",
    "dist",
]

[tool.ruff.isort]
known-first-party = ["pycalf"]
profile = "black"
line-length = 79
include_trailing_comma = true

[tool.ruff.mypy]
no_strict_optional = true
ignore_missing_imports = true
check_untyped_defs = true

